[project]
name = "pfasimplu"
version = "2.0.6"
description = "Aplicatie de contabilitate pentru PFA-uri"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.11",
    "django-cleanup==8.1.0",
    "django-browser-reload==1.13.0",
    "cursvalutarbnr==1.0.5",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "matplotlib==3.9.2",
    "requests>=2.32.5",
    "pypdf==4.3.1",
    "cachetools==5.5.0",
    "Unidecode==1.3.8",
    "flaskwebgui==1.1.9",
    "waitress==3.0.1",
    "whitenoise==6.7.0",
    "fpdf-table==1.1.5",
    "requests-cache==1.2.1"
]

